finish: add,update,delete of admins,users,products

--- a/views/sanpham.hbs
+++ b/views/sanpham.hbs
@@ -34,7 +34,7 @@
             </form>
             <ul class="  navbar-nav fmy-2 my-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Giỏ hàng</a>
+
                 </li>
                 <li class="nav-item">
                     <div class="btn-group">
@@ -43,9 +43,9 @@
                             Tài khoản
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Tài khoản của bạn</a>
+                            <a class="dropdown-item" href="/index">Tài khoản của bạn</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Đăng xuất</a>
+                            <a class="dropdown-item" href="/">Đăng xuất</a>
                         </div>
                     </div>
                 </li>
@@ -69,7 +69,7 @@
                                 <div class="card-footer">
                                     <p class="">Giá:  {{this.price}} VNĐ</p>
                                     <p class="">Loại:  {{this.type}}</p>
-                                    <a class="btn btn-primary col-12">Thêm vào giỏ hàng</a>
+                                    <a class="btn btn-primary col-12">Số lượng: {{this.sl}}</a>
                                 </div>
                             </div>
                         </div>
