--- a/views/danhsachkhachhang.hbs
+++ b/views/danhsachkhachhang.hbs
@@ -35,7 +35,7 @@
             </form>
             <ul class="  navbar-nav fmy-2 my-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Giỏ hàng</a>
+
                 </li>
                 <li class="nav-item">
                     <div class="btn-group">
@@ -44,9 +44,9 @@
                             Tài khoản
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Tài khoản của bạn</a>
+                            <a class="dropdown-item" href="/index">Tài khoản của bạn</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Đăng xuất</a>
+                            <a class="dropdown-item" href="/">Đăng xuất</a>
                         </div>
                     </div>
                 </li>
@@ -72,7 +72,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-sm-10 rounded-bottom bg-light ">
+        <div class="col-sm-10 rounded-bottom bg-light " style="padding-right: 3%">
 
             <hr>
             <table class="table container">
