--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,7 +34,7 @@
             </form>
             <ul class="  navbar-nav fmy-2 my-lg-0 ">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Giỏ hàng</a>
+
                 </li>
                 <li class="nav-item">
                     <div class="btn-group">
@@ -43,9 +43,9 @@
                             Tài khoản
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Tài khoản của bạn</a>
+                            <a class="dropdown-item" href="/index">Tài khoản của bạn</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Đăng xuất</a>
+                            <a class="dropdown-item" href="/">Đăng xuất</a>
                         </div>
                     </div>
                 </li>
@@ -72,15 +72,30 @@
                 </a>
             </div>
         </div>
-        <div class="col-sm-10 bg-danger">
-            <h2>Xin chào tài khoản {{user}}</h2>
-            <div>Chúc bạn ngày mới tốt lành</div>
-            <form action="/signIn" method="get">
-                <div class="form-group" style="display: none">
-                    <input type="text" name="userKH" value="{{user}}" class="form-control">
-                </div>
-                <button type="submit" name="dx" value="1" class="btn btn-warning">Đăng xuất</button>
-            </form>
+        <div class="col-sm-10 bg-light" style="padding-right: 3%">
+            <div class="container col-sm-12 bg-success">
+                <h2>Xin chào tài khoản {{user}}</h2>
+                <div>Chúc bạn ngày mới tốt lành</div>
+                <hr>
+            </div>
+
+            <table class="table table-bordered table-info">
+                <thead class="thead-dark ">
+                <tr>
+                    <th scope="col">Thống kê</th>
+                    <th scope="col">Sản phẩm</th>
+                    <th scope="col">Khách hàng(tài khoản)</th>
+                    <th scope="col">Quản trị viên(tài khoản)</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">Số lượng</th>
+                    <td>{{allProduct}}</td>
+                    <td>{{allUser}}</td>
+                    <td>{{allAdmin}}</td>
+                </tr>
+            </table>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
