--- a/views/danhsachkhachhang.hbs
+++ b/views/danhsachkhachhang.hbs
@@ -70,6 +70,9 @@
                 <a href="/createAdAc" class="list-group-item list-group-item-action">
                     Tài khoản quản trị
                 </a>
+                <a href="/createUsAc" class="list-group-item list-group-item-action">
+                    Tạo tài khoản khách
+                </a>
             </div>
         </div>
         <div class="col-sm-10 rounded-bottom bg-light " style="padding-right: 3%">
