--- a/views/signIn.hbs
+++ b/views/signIn.hbs
@@ -10,50 +10,54 @@
 <body>
 
 <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark rounded-bottom bg-dark">
         <div class="container collapse navbar-collapse col-4">
             <a class="navbar-brand " href="#"><span class="text-capitalize display-4">Đăng nhập</span></a>
         </div>
     </nav>
-    <div class="container rounded-bottom ">
-        <br>
+    <div class="container rounded-bottom" style="margin-top: 10px">
         <div class="row">
-            <div class="col">
+            <div class="col-7">
                 <img src="./public/images/gb.jpg" class="img-fluid" alt="Responsive image">
             </div>
-            <div class="col bg-light rounded">
-                <br><br><br>
-                <form action="/index" method="get">
-                    <div class="form-group">
-                        <label for="InputUsername">Username</label>
-                        <input value="{{user}}" type="text" name="user" class="form-control" id="InputUsername"
-                               required
-                               placeholder="Enter your username">
-                    </div>
-                    <div class="form-group">
-                        <label for="InputPassword">Password</label>
-                        <input value="{{pass}}" type="password" name="pass" class="form-control" id="InputPassword"
-                               required
-                               placeholder="Enter your password">
-                    </div>
-                    <br>
-                    <div class="row justify-content-center">
-                        <div class="col-7">
-                            <button type="submit" name="sm" value="1" class="btn btn-outline-dark col-sm-12 "
-                                    aria-describedby="lgHelp">Đăng nhập
-                            </button>
-                        </div>
-                    </div>
-                </form>
-                <br> <br>
-                <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show"
-                     role="alert">
-                    {{data}}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
+            <div class="col bg-light rounded"><br>
+                <div class="container" style="padding: 20px">
 
+                    <form action="/index" method="get">
+                        <h1 for="InputUsername">Xin chào,</h1>
+                        <br><br>
+                        <div class="form-group">
+                            <label for="InputUsername">Username</label>
+                            <input value="{{user}}" type="text" name="user" class="form-control" id="InputUsername"
+                                   required
+                                   placeholder="Enter your username">
+                        </div>
+                        <div class="form-group">
+                            <label for="InputPassword">Password</label>
+                            <input value="{{pass}}" type="password" name="pass" class="form-control" id="InputPassword"
+                                   required
+                                   placeholder="Enter your password">
+                        </div>
+                        <br>
+                        <div class="row justify-content-center">
+                            <div class="col-7">
+                                <button type="submit" name="sm" value="1" class="btn btn-outline-dark col-sm-12 "
+                                        aria-describedby="lgHelp">Đăng nhập
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                    <br> <br>
+                    <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show"
+                         role="alert">
+                        {{data}}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
+
+                </div>
 
             </div>
         </div>
