--- a/views/updateAdAc.hbs
+++ b/views/updateAdAc.hbs
@@ -67,6 +67,9 @@
             <a href="/createAdAc" class="list-group-item list-group-item-action">
                 Tài khoản quản trị
             </a>
+            <a href="/createUsAc" class="list-group-item list-group-item-action">
+                Tạo tài khoản khách
+            </a>
         </div>
     </div>
 
