App connection: register customers, add shopping cart

--- a/views/sanpham.hbs
+++ b/views/sanpham.hbs
@@ -61,8 +61,8 @@
                 {{#each data}}
                     <div class="col mb-4">
                         <div class="card">
-                            <img src="{{this.image}}" class="card-img-top" width="100px" height="200px"
-                                 alt='{{this.image}}'>
+                            <img src="../public/images/{{this.image}}" class="card-img-top" width="100px" height="200px"
+                                 alt='../public/images/{{this.image}}'>
                             <div class="card-body">
                                 <h5 class="card-title">{{this.name}}</h5>
                                 <p class="card-text">{{this.description}}</p>
