--- a/views/uploadsanpham.hbs
+++ b/views/uploadsanpham.hbs
@@ -77,30 +77,31 @@
         <div class="col-sm-10  rounded-bottom bg-light " style="padding-right: 3%">
             <hr>
             <hr>
-            <form action="" method="get" class=" container col-10">
+
+            <form action="" method="post" class=" container col-10" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="nameSP">Tên sản phẩm</label>
-                    <input type="text" class="form-control" name="nameSP">
+                    <input type="text" class="form-control" required name="nameSP">
                 </div>
                 <div class="form-group">
                     <label for="priceSP">Giá sản phẩm</label>
-                    <input type="text" class="form-control" name="priceSP">
+                    <input type="text" class="form-control" required name="priceSP">
                 </div>
                 <div class="form-group">
                     <label for="exImage">Hình ảnh</label>
-                    <input type="file" class="form-control-file" name="exImage">
+                    <input type="file" class="form-control-file" required name="exImage">
                 </div>
                 <div class="form-group">
                     <label for="descriptionSP">Miêu tả sản phẩm</label>
-                    <input type="text" class="form-control" name="descriptionSP">
+                    <input type="text" class="form-control" required name="descriptionSP">
                 </div>
                 <div class="form-group">
                     <label for="typeSP">Loại sản shẩm</label>
-                    <input type="text" class="form-control" name="typeSP">
+                    <input type="text" class="form-control" required name="typeSP">
                 </div>
                 <div class="form-group">
                     <label for="slSP">Số lượng</label>
-                    <input type="text" class="form-control" name="slSP">
+                    <input type="text" class="form-control" required name="slSP">
                 </div>
 
                 <div style="display: {{status}}" class="alert alert-warning alert-dismissible fade show" role="alert">
