--- a/views/updatesanpham.hbs
+++ b/views/updatesanpham.hbs
@@ -77,7 +77,7 @@
         <div class="col-sm-10  rounded-bottom bg-light " style="padding-right: 3%">
             <hr>
             <hr>
-            <form action="/quanlysanpham" method="get" class=" container col-10">
+            <form action="/quanlysanpham" method="post" class=" container col-10" enctype="multipart/form-data">
                 <input type="text" name="nId" value="{{idSP}}" required class="form-control" style="display: none">
                 <div class="form-group">
                     <label for="nameSP">Tên sản phẩm</label>
