--- a/views/quanlysanpham.hbs
+++ b/views/quanlysanpham.hbs
@@ -125,6 +125,7 @@
                             <form>
                                 <div class="form-group" style="display: none">
                                     <input type="text" name="idSP" value="{{this._id}}" class="form-control">
+                                    <input type="text" name="imageSP" value="{{this.image}}" class="form-control">
                                 </div>
                                 <button type="submit" name="del" value="1" class="btn btn-danger">Xóa</button>
                             </form>
