fix: upload image from outside

--- a/views/quanlysanpham.hbs
+++ b/views/quanlysanpham.hbs
@@ -73,14 +73,14 @@
                 </a>
             </div>
         </div>
-        <div class="col-sm-10  rounded-bottom bg-light " style="padding-right: 3%">
+        <div class="col-sm-10 container rounded-bottom bg-light " style="padding-right: 3%">
             <hr>
 
-            <table class="table container">
+            <table class="table ">
                 <thead>
                 <tr>
                     <th scope="col">_id</th>
-                    <th scope="col">Đường dẫn ảnh</th>
+                    <th scope="col" >Đường dẫn ảnh</th>
                     <th scope="col">Tên sản phẩm</th>
                     <th scope="col">Giá(VNĐ)</th>
                     <th scope="col">Mô tả</th>
@@ -100,7 +100,7 @@
                     <tr>
                         <th scope="row">{{this._id}}</th>
                         <td>{{this.image}}</td>
-                        <td>{{this.name}}</td>
+                        <td >{{this.name}}</td>
                         <td>{{this.price}}</td>
                         <td>{{this.description}}</td>
                         <td>{{this.type}}</td>
